--- a/source/box/collect/响应式视差滚动相册/index.html
+++ b/source/box/collect/响应式视差滚动相册/index.html
@@ -103,55 +103,55 @@
 <body>
     <div class="shell">
         <div class="images slower">
-            <img src="./img/1.webp">
+            <img src="/assets/images/cartoon/3.webp">
         </div>
         <div class="images faster">
-            <img src="./img/2.webp">
+            <img src="/assets/images/cartoon/4.webp">
         </div>
         <div class="images vertical">
-            <img src="./img/3.webp">
+            <img src="/assets/images/cartoon/5.webp">
         </div>
         <div class="images slower-down">
-            <img src="./img/4.webp">
+            <img src="/assets/images/cartoon/6.webp">
         </div>
         <div class="images">
-            <img src="./img/5.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/1.webp">
         </div>
         <div class="images slower">
-            <img src="./img/6.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/2.webp">
         </div>
         <div class="images faster1">
-            <img src="./img/7.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/3.webp">
         </div>
         <div class="images slower1">
-            <img src="./img/8.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/4.webp">
         </div>
         <div class="images">
-            <img src="./img/9.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/5.webp">
         </div>
         <div class="images slower">
-            <img src="./img/10.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/6.webp">
         </div>
         <div class="images faster">
-            <img src="./img/11.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/7.webp">
         </div>
         <div class="images vertical">
-            <img src="./img/12.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/8.webp">
         </div>
         <div class="images slower-down">
-            <img src="./img/13.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/9.webp">
         </div>
         <div class="images">
-            <img src="./img/14.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/10.webp">
         </div>
         <div class="images slower">
-            <img src="./img/15.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/11.webp">
         </div>
         <div class="images faster1">
-            <img src="./img/16.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/12.webp">
         </div>
         <div class="images slower1">
-            <img src="./img/17.webp">
+            <img src="https://cdn.staticaly.com/gh/1405720461/images@master/cartoon/13.webp">
         </div>
     </div>
 </body>
