--- a/source/box/collect/滑动登录注册页/index.html
+++ b/source/box/collect/滑动登录注册页/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>滑动登录注册页</title>
     <!-- 导入字体图标 -->
-    <link rel="stylesheet" href="http://at.alicdn.com/t/c/font_3893865_eobylzj4tcb.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_4118831_cvq7r4p68af.css">
 
     <link rel="stylesheet" href="./index.css">
 </head>
@@ -20,7 +20,7 @@
                 <div class="form_icons">
                     <i class="iconfont icon-QQ"></i>
                     <i class="iconfont icon-weixin"></i>
-                    <i class="iconfont icon-bilibili-line"></i>
+                    <i class="iconfont icon-bilibili"></i>
                 </div>
                 <span class="form_span">选择注册方式活电子邮箱注册</span>
                 <input type="text" class="form_input" placeholder="Name">
@@ -36,7 +36,7 @@
                 <div class="form_icons">
                     <i class="iconfont icon-QQ"></i>
                     <i class="iconfont icon-weixin"></i>
-                    <i class="iconfont icon-bilibili-line"></i>
+                    <i class="iconfont icon-bilibili"></i>
                 </div>
                 <span class="form_span">选择登录方式活电子邮箱登录</span>
                 <input type="text" class="form_input" placeholder="Email">
