--- a/source/box/collect/Day-night-toggle-button-master/index.html
+++ b/source/box/collect/Day-night-toggle-button-master/index.html
@@ -2,20 +2,25 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>贼几把酷炫的小开关</title>
+		<title></title>
 		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
 		<div class="components">
+			<!-- 组件所有元素 -->
 			<div class="main-button">
+				<!-- 按钮主体(圆) -->
 				<div class="moon"></div>
 				<div class="moon"></div>
 				<div class="moon"></div>
+				<!-- 月亮上的陨石坑 -->
 			</div>
 			<div class="daytime-backgrond"></div>
 			<div class="daytime-backgrond"></div>
 			<div class="daytime-backgrond"></div>
+			<!-- 按钮底层的三个虚影 -->
 			<div class="cloud">
+				<!-- 所有的云 -->
 				<div class="cloud-son"></div>
 				<div class="cloud-son"></div>
 				<div class="cloud-son"></div>
@@ -24,6 +29,7 @@
 				<div class="cloud-son"></div>
 			</div>
 			<div class="cloud-light">
+				<!-- 云的虚影 -->
 				<div class="cloud-son"></div>
 				<div class="cloud-son"></div>
 				<div class="cloud-son"></div>
@@ -32,6 +38,7 @@
 				<div class="cloud-son"></div>
 			</div>
 			<div class="stars">
+				<!-- 所有星星，每一个星星由四个div拼合而成 -->
 				<div class="star big">
 					<div class="star-son"></div>
 					<div class="star-son"></div>
