--- a/source/box/collect/响应式视差滚动相册/index.html
+++ b/source/box/collect/响应式视差滚动相册/index.html
@@ -115,43 +115,43 @@
             <img src="/assets/images/cartoon/6.webp">
         </div>
         <div class="images">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/1.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/1.webp">
         </div>
         <div class="images slower">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/2.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/2.webp">
         </div>
         <div class="images faster1">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/3.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/3.webp">
         </div>
         <div class="images slower1">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/4.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/4.webp">
         </div>
         <div class="images">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/5.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/5.webp">
         </div>
         <div class="images slower">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/6.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/6.webp">
         </div>
         <div class="images faster">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/7.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/7.webp">
         </div>
         <div class="images vertical">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/8.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/8.webp">
         </div>
         <div class="images slower-down">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/9.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/9.webp">
         </div>
         <div class="images">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/10.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/10.webp">
         </div>
         <div class="images slower">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/11.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/11.webp">
         </div>
         <div class="images faster1">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/12.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/12.webp">
         </div>
         <div class="images slower1">
-            <img src="https://cdn.jsdelivr.net/gh/1405720461/images@master/cartoon/13.webp">
+            <img src="https://fastly.jsdelivr.net/gh/1405720461/images@master/cartoon/13.webp">
         </div>
     </div>
 </body>
